--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <button type="button" class="btn btn-default">
                   <span class="fa fa-lastfm" aria-hidden="true"></span></button>
                 </a>
-                <a href="mailto:contact@nickplayfair.co.uk">
+                <a href="#">
                 <button type="button" class="btn btn-default">
                   <span class="fa fa-envelope" aria-hidden="true"></span></button>
                 </a>
