--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <h1 style="font-family: 'Courier', 'Courier New', monospace">coming soon</h1>
+<a href="https://twitter.com/nplayfair" rel="me">@nplayfair on Twitter</a>
