--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1 style="font-family: 'Courier', 'Courier New', monospace">coming soon</h1>
-<a href="https://twitter.com/nplayfair" rel="me">@nplayfair on Twitter</a>
+<a style="font-size: 8px;" href="https://twitter.com/nplayfair" rel="me">@nplayfair on Twitter</a>
+<a style="font-size: 8px;" href="https://github.com/nplayfair" rel="me">Github</a>
