--- a/amazon.html
+++ b/amazon.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <title>Nick's Amazon</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-<h1>Thanks!</h1>
+<h1>Nick's Amazon Link. Thanks!</h1>
 <iframe src="//rcm-eu.amazon-adsystem.com/e/cm?t=nickp-21&o=2&p=12&l=ez&f=ifr&f=ifr" width="300" height="250" scrolling="no" marginwidth="0" marginheight="0" border="0" frameborder="0" style="border:none;max-width:800px;max-height:600px;"></iframe>
 
 </body>
