--- a/amazon.html
+++ b/amazon.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Nick's Amazon</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width">
 </head>
 
 <body>
