--- a/amazon.html
+++ b/amazon.html
@@ -3,6 +3,10 @@
 <head>
 <title>Nick's Amazon</title>
 <meta name="viewport" content="width=device-width">
+  <script src="addtohomescreen.min.js"></script>
+  <script>
+addToHomescreen();
+</script>
 </head>
 
 <body>
