layout intro and photo

--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
 		<li>Projects</li>
 		<li>Contact</li>
 	</ul>
+</nav>
+<main>
+
+<h2 id="about">About</h2>
+<p>Web developer from Nottingham, UK. Over the past few years I’ve been involved in a number of projects doing frontend and backend development.</p>
+
+<p>I’ve always had a keen interest in technology and studied computer science at the University of Lincoln where I gained a BSc (Hons) degree.</p>
+</main>
+<img src="img/wheel.jpg" id="main_image" alt="Big Wheel in Nottingham city centre">
+<!-- <aside id="photograph">
+	<img src="img/wheel.jpg" id="main_image" alt="Big Wheel in Nottingham city centre">
+</aside> -->
+
 
 </body>
 </html>
