active class to denote current page

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
 <nav role="navigation" class="vertical-center">
 	<ul id="navlist">
-		<li>Home</li>
-		<li>Me</li>
-		<li>Work</li>
-		<li>Projects</li>
-		<li>Contact</li>
+		<a href="//index.html"><li class="active">Home</li></a>
+		<a href="#"><li>Me</li></a>
+		<a href="#"><li>Work</li></a>
+		<a href="#"><li>Projects</li></a>
+		<a href="#"><li>Contact</li></a>
 	</ul>
 </nav>
 <main>
