--- a/index.html
+++ b/index.html
@@ -29,13 +29,6 @@
 
 <p>I’ve always had a keen interest in technology and studied computer science at the University of Lincoln where I gained a BSc (Hons) degree.</p>
 </main>
-<div id="photograph">
-</div>
-
-<!-- <aside id="photograph">
-	<img src="img/wheel.jpg" id="main_image" alt="Big Wheel in Nottingham city centre">
-</aside> -->
-
-
+<div id="photograph"></div>
 </body>
 </html>
