--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
 
-<header>
-	<h1>Nick Playfair</h1>
-</header>
+<div id="headercontainer">
+	<header>
+		<h1>Nick Playfair</h1>
+	</header>
+</div>
 
 <nav role="navigation" class="vertical-center">
 	<ul id="navlist">
