--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
 	</ul>
 </nav>
 <main>
+	<section>
+	<h2 id="about">About</h2>
+	<p>Web developer from Nottingham, UK. Over the past few years I’ve been involved in a number of projects doing frontend and backend development.</p>
 
-<h2 id="about">About</h2>
-<p>Web developer from Nottingham, UK. Over the past few years I’ve been involved in a number of projects doing frontend and backend development.</p>
-
-<p>I’ve always had a keen interest in technology and studied computer science at the University of Lincoln where I gained a BSc (Hons) degree.</p>
+	<p>I’ve always had a keen interest in technology and studied computer science at the University of Lincoln where I gained a BSc (Hons) degree.</p>
+	</section>
 </main>
 <div id="photograph"></div>
 </body>
