Better nav for mobile
Use flexbox to distribute space between li elements so none get pushed off screen on iPhone 5 and smaller devices.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</header>
 
 
-<nav role="navigation" class="vertical-center">
+<nav role="navigation">
 	<ul id="navlist">
 		<a href="//index.html"><li class="active">Home</li></a>
 		<a href="#"><li>Me</li></a>
